fix: upgrade cui-java-parent to 1.5.0 with breaking change fixes
Adds Lombok builder stub to ConnectionMetadata for Javadoc compatibility,
updates test code for API changes, and fixes CDI/config adaptations.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>